fix(z-index): fix z-index of navbar, footer, search & customizer

--- a/typescript-version/full-version/src/@layouts/components/horizontal/footer.module.css
+++ b/typescript-version/full-version/src/@layouts/components/horizontal/footer.module.css
@@ -5,6 +5,7 @@
 .footerFixed {
   position: sticky;
   inset-block-end: 0;
+  z-index: var(--footer-z-index);
   background-color: var(--background-color);
   border-block-start: 1px solid var(--border-color);
 }
